--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p> Hola estudiante este es mi sitio web sigueme en twitter en celismx si tienes dudas, preguntame.....</p>
+    <p> Hola amigas & amigos este es mi sitio web sigueme en twitter en celismx si tienes dudas, preguntame.....</p>
     
 </body>
 </html>
